src-env-specific-pre/objects/Loqate_Component__mdt/fields/Company_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Company_Mapping__c</fullName>
    <inlineHelpText>Value should be in JSON format with the following attributes:  label, apiName, statusValidationField, loqateRequest, and loqateResponse</inlineHelpText>
    <label>Company Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>