src-env-specific-pre/objects/Loqate_Component__mdt/fields/Country_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Country_Mapping__c</fullName>
    <inlineHelpText>Should be in JSON FORMAT. Array of objects where label property is the country and value is its ISO 3166-1 alpha-2 country code.</inlineHelpText>
    <label>Country Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>