src-env-specific-pre/objects/Loqate_Component__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>